src/assets/style/base/_elements.scss
/** -----------------------------------------------------------------
  * SECTION LINKS
------------------------------------------------------------------ */

a:not([class]) {
  @include txt-color(blue);
  text-decoration: none;

  &:hover, &:focus {
    @include txt-color(blue, 800);
    text-decoration: underline;
  }

  &[target="_blank"]::after,
  &[data-link-type="external"] {
    content: ' \e91f';
    font-size: 90%;
  }

  &[href$='.pdf']::after,
  &[data-link-type='document']::after {
    content: '\e91d';
    font-size: 90%;
    padding-left: 0.1em;
  }
}

/* END !SECTION LINKS */
/** -----------------------------------------------------------------
  * SECTION BLOCKQUOTE
------------------------------------------------------------------ */

blockquote {
  --theme-color: var(--color-blue-500);
  border-left: 10px solid var(--theme-color);
  @include pl(1);
  @include txt-color(gray, 900);
  // @include rounded;
  // @include bg-color(blue, 100);
  // p:first-child {
  //   @include txt-medium;
  // }
}

/* END !SECTION BLOCKQUOTE */
/** -----------------------------------------------------------------
  * SECTION LISTS
  * TODO: Add definition lists
------------------------------------------------------------------ */

ul:not([class]) { list-style-type: disc; }

ol:not([class]) { list-style-type: decimal; }

ul:not([class]), ol:not([class]) {
  list-style-type: disc;
  @include ml(1);
  @include mb(1);

  li, ol, ul { @include mb(0.5); }
}

dt { font-weight: bold; }
dd { @include pl(1); }

/* END !SECTION LISTS */
/** -----------------------------------------------------------------
  * SECTION MEDIA
  * TODO: Add other aspect ratios
------------------------------------------------------------------ */

.video-wrapper {
  position: relative;
  padding-bottom: 56.25%; /* 16:9 */
  padding-top: 25px; // QUESTION What is this for?
  height: 0;
  @include mb(1);
}

.video-wrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

img {
  display: block;
  max-width: 100%;
}

/* END !SECTION MEDIA */
/** -----------------------------------------------------------------
  * SECTION RULES
  * TODO: Add variations
------------------------------------------------------------------ */

hr.spacer {
  border: none;
  margin: 0;
  @include pt(1, fluid)
}

/* END !SECTION MISC */

